--- a/.github/workflows/viewer.yaml
+++ b/.github/workflows/viewer.yaml
@@ -2,14 +2,14 @@ name: 'GDS 2D and 3D'
 
 on:
   workflow_dispatch: # Trigger manually
-    
+
 permissions:
   pages: write
   id-token: write
 
 jobs:
   GDS2PNG:
-    runs-on: ubuntu-20.04  # Run the job on an Ubuntu 20.04 environment
+    runs-on: ubuntu-latest
 
     steps:
 
@@ -48,7 +48,7 @@ jobs:
         path: 'gds_render.png'
 
   GDS2gTLF:
-    runs-on: ubuntu-20.04  # Run the job on an Ubuntu 20.04 environment
+    runs-on: ubuntu-latest
     needs: GDS2PNG  # This job depends on the successful completion of GDS2PNG
 
     steps:
@@ -77,7 +77,7 @@ jobs:
     # Rename the GDS file to match the expected input for the GDS2glTF tool
     - name: Rename GDS file
       run: |
-        GDS_FILE=$(ls ./*.gds | head -n 1) 
+        GDS_FILE=$(ls ./*.gds | head -n 1)
         if [ -z "$GDS_FILE" ]; then
           echo "Error: No GDS file found in the gds/ directory."
           exit 1
@@ -98,10 +98,11 @@ jobs:
         path: 'GDS2glTF_repo/render.gds.gltf'
 
   GithubSite:
-    runs-on: ubuntu-20.04  # Run the job on an Ubuntu 20.04 environment
+    environment: gds
+    runs-on: ubuntu-latest
     needs: GDS2gTLF  # This job depends on the successful completion of GDS2gTLF
 
-    steps: 
+    steps:
     - name: Check out repository
       uses: actions/checkout@v4  # Checkout the repository code
 
@@ -150,7 +151,7 @@ jobs:
       uses: actions/upload-pages-artifact@v3
       with:
         path: 'gh-pages'
-    
+
     # Deploy the generated content to GitHub Pages
     - name: Deploy to GitHub Pages
       id: deployment
